@@ -6,6 +6,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -30,7 +31,7 @@ public class ReadTag {
 	public ReadTag(String theURLString) throws 
 			IOException, MalformedURLException {
 
-		this(new URL(theURLString));
+		this(URI.create(theURLString).toURL());
 	}
 
 	/** Construct a ReadTag given a URL */
